feat: add global error handling to operation, programmer or system errors
1. setup custom error class and use middleare to handle and the errors
2. add directories to setup file structure
3. fix naming convention of files and variables
